--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="Weather App/style.css" />
+    <link rel="stylesheet" href="Weather_App/style.css" />
     <title>Weather App.</title>
   </head>
   <body>
@@ -29,6 +29,6 @@
         </section>
       </section>
     </div>
-    <script src="Weather App/script.js"></script>
+    <script src="Weather_App/script.js"></script>
   </body>
 </html>
